@@ -1,5 +1,8 @@
 Release Notes
 
+* 3/8/2016
+  * fixed to properly decrease priorities for group analysis
+
 * 3/7/2016
   * using is_local in DdmSpec
 
